--- a/ansible/roles/grafana/templates/statsd_dashboard.json.j2
+++ b/ansible/roles/grafana/templates/statsd_dashboard.json.j2
@@ -52,7 +52,7 @@
     ]
   },
   "description": "Dashboard for the F5 BIG-IP Telemetry Streaming, StatsD",
-  "editable": false,
+  "editable": true,
   "gnetId": null,
   "graphTooltip": 0,
   "id": null,
@@ -2452,6 +2452,7 @@
       "10s",
       "30s",
       "1m",
+      "3m",
       "5m",
       "15m",
       "30m",
@@ -2461,8 +2462,10 @@
     ],
     "time_options": [
       "5m",
+      "10m",
       "15m",
       "1h",
+      "3h",
       "6h",
       "12h",
       "24h",
@@ -2473,7 +2476,7 @@
   },
   "timezone": "",
   "title": "Telemetry Streaming StatsD Dashboard for F5 BIG-IP",
-  "uid": null,
+  "uid": "{{ grafana.dashboard_uid }}",
   "variables": {
     "list": []
   },
