make grafana playbook idempotent

--- a/ansible/roles/grafana/templates/statsd_dashboard.json.j2
+++ b/ansible/roles/grafana/templates/statsd_dashboard.json.j2
@@ -2476,7 +2476,7 @@
   },
   "timezone": "",
   "title": "Telemetry Streaming StatsD Dashboard for F5 BIG-IP",
-  "uid": "{{ grafana.dashboard_uid }}",
+  "uid": "{{ dashboard_uid }}",
   "variables": {
     "list": []
   },
