--- a/ansible/roles/grafana/templates/datasource_graphite.json.j2
+++ b/ansible/roles/grafana/templates/datasource_graphite.json.j2
@@ -1,5 +1,5 @@
 {
-    "name": "GraphiteDatasource",
+    "name": "{{ datasource_name }}",
     "type": "graphite",
     "access": "proxy",
     "url": "http://{{ graphite_private_ip }}:80",
